# keep_a_changelog_file

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml
.github/: CODEOWNERS
.github/workflows/: check_changelog.yml  check_changelog2.yml  ci.yml
action/: Cargo.toml
action/src/: gha.rs  main.rs
demo/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
demo/assets/: action.js  main.js  samples.js
demo/examples/: changes_group_typo.md  changes_with_no_group.md  missing_unreleased.md  nodejs.md  release_with_no_changes.md  spec.md
demo/src/: lib.rs
src/: change_group.rs  changelog.rs  changes.rs  lib.rs  main.rs  parser.rs  release.rs  release_date.rs  release_link.rs  release_tag.rs  release_version.rs  releases.rs  unreleased.rs  version.rs
tests/: integration_test.rs
validate/: action.yml  index.cjs  index.js  package-lock.json  package.json
