[package]
name = "keep_a_changelog_file"
version = "0.1.0"
description = "Read and write changelog files using the Keep a Changelog format"
repository = "https://github.com/heroku/keep_a_changelog"
license = "Apache-2.0"
keywords = ["keep-a-changelog", "changelog", "serialize", "deserialize"]
categories = ["parser-implementations", "parsing"]
edition = "2021"
rust-version = "1.74"
exclude = [
    ".idea",
    ".github",
    ".editorconfig"
]

[dependencies]
chrono = "0.4"
indexmap = "2"
lazy_static = "1"
markdown = "=1.0.0-alpha.21"
regex = "1"
semver = "1"
thiserror = "2"
uriparse = "0.6"

[lints.rust]
unused_crate_dependencies = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
panic_in_result_fn = "warn"
# The explicit priority is required due to https://github.com/rust-lang/cargo/issues/13565.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
enum_variant_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
